--- a/Personnage.html
+++ b/Personnage.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-<a href="index.html"><img class="icon" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/Homebutton.png" alt="home button"></a><br>
+<a href="index.html"><img class="icon" src="https://brookenword.github.io/Kunitsukami/image/Homebutton.png" alt="home button"></a><br>
   <strong>Fukashi no seishin (Les étoiles invisibles) </strong><br>
   <p>Urashima Odoyaka <em>ancien roi du palais du dragon, dragon des pouvoirs, gp de Kaiyo</em> <br>
     Niten - Takezo Shinmen- Miyamoto Musashi<br>
@@ -214,7 +214,7 @@
   <p>Doku<br>
     Jun <em>Nindo</em><br>
     Kendo <em>kendo</em><br></p>
-<a href="index.html"><img class="icon" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/Homebutton.png" alt="home button"></a>
+<a href="index.html"><img class="icon" src="https://brookenword.github.io/Kunitsukami/image/Homebutton.png" alt="home button"></a>
 </body>
 
 </html>
